--- a/biome.json
+++ b/biome.json
@@ -1,11 +1,5 @@
 {
   "formatter": {
-    "enabled": true,
-    "formatWithErrors": false,
-    "indentStyle": "space",
-    "indentWidth": 2,
-    "lineWidth": 80,
-    "lineEnding": "lf",
-    "ignore": []
+    "indentStyle": "space"
   }
 }
