Added comment re type coersion, changed isNan error to warning in biome

--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,12 @@
 {
   "formatter": {
     "indentStyle": "space"
+  },
+  "linter": {
+    "rules": {
+      "suspicious": {
+        "noGlobalIsNan": "warn"
+      }
+    }
   }
 }
